--- a/MasterYi.plist
+++ b/MasterYi.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cvws.icloud-content.com/B/ASBeAKNyxrB8WVq_dSphwKpVZBGbAZ3JhhdUc9nO15Hb_2QvCqLF2RN6/MasterYi-resigned.ipa?o=AqmO_iF-uMFznovCwa61hl_5rszY511kAZARtX0X3DT0&amp;v=1&amp;x=3&amp;a=B2u9_4GhiIvLnQopFL29gxW1clEpAzdMQgEAAAMoTEI&amp;e=1522997200&amp;k=4-PzlA4iYIr-YVDbwcg_iQ&amp;fl=&amp;r=0157bba1-60c5-4043-b8f1-72fd701b788e-1&amp;ckc=com.apple.clouddocs&amp;ckz=com.apple.CloudDocs&amp;p=70&amp;s=vAdoccXdGIcBNHJUw_w2nkClqAM</string>
+					<string>https://s3-ap-northeast-1.amazonaws.com/valoran-prod/apk/masteryi.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
